--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
-title: Introduction | Dank
-description: Dank is a performant styling library for React and React Native that enables developers to write maintainable and scalable styles in a fast and efficient manner.
+title: Introduction | Glustack UI
+description: Glustack UI is a React library that provides universal, unstyled, and accessible components. It includes keyboard accessibility and focus management features, making it a great choice for developers who prioritize accessibility and usability.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
@@ -9,96 +9,59 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Introduction
 
-Dank is a high-performing styling CSS-in-JS library for React and React Native that allows developers to create scalable and maintainable styles quickly and effectively.
+Gluestack UI is a React library of universal, unstyled, and accessible components, designed for easy integration into web and mobile applications. With keyboard accessibility and focus management features, it's a great choice for developers who prioritize accessibility and usability.
 
-## Why we built dank.style?
+we believe that creating accessible and user-friendly user interfaces should be easy for developers. However, we noticed that many existing UI libraries require a lot of customization to meet accessibility standards and often lack the performance required for mobile applications. To address this, we built Gluestack UI, a library of universal, unstyled, and accessible components that can be easily customized and integrated into any web or mobile application.
+
+## Why we built Gluestack UI?
 
 Dank is different from other CSS-in-JS libraries like Glamour, Emotion, Styled-components, and Vanilla-extract because it focuses on React Native while still being universal and high-performing on the web. Unlike other libraries, dank's styles are calculated during compile-time using a babel-plugin, which reduces the amount of processing needed during runtime. This means that with Server-Side Rendering (SSR) and Static Site Generation (SSG), pages created with dank can even run without JavaScript on the client, including media queries.
 
-Dank originally started as part of NativeBase, a universal component library for both React and React Native. However, we realized that not everyone needs all the components from NativeBase, so we broke it down into three separate libraries:
+Gluestack UI originally started as part of NativeBase, a universal component library for both React and React Native. However, we realized that not everyone needs all the components from NativeBase, so we broke it down into three separate libraries:
 
 - [dank.style](https://dank.style) - The high-performing and universal CSS-in-JS library.
-- [universa11y.dev](https://universa11y.dev) (coming soon) - A collection of HOCs that adds accessibility to low-level [dank.style](https://dank.style) components or any component with the same prop type.
-- gluestack-ui (coming soon) - A set of ready-to-use universal components that can be added to any project and styled to fit your needs. You can even customize the components as desired.
+- [ui.gluestack.io](https://ui.gluestack.io) - Universal, unstyled, and accessible components that adds accessibility to low-level [dank.style](https://dank.style) components or any component with the same prop type. You can even customize the components as desired.=
 
 ## But aren’t React Native and React Native Web sufficient?
 
-Dank and React Native Web aren’t directly comparable as they are different.
+Gluestack UI and React Native Web aren’t directly comparable as they are different.
 
-React Native Web has two parts
+While React Native and React Native Web can be used to create cross-platform applications, they require developers to write platform-specific code and to customize their components for accessibility and performance. Gluestack UI provides a different approach by offering a set of universal, unstyled, and accessible components that work seamlessly on both web and mobile platforms.
 
-- A set of low-level components
-- A CSS-in-JS library to style those components
+By using Gluestack UI, developers can create accessible and user-friendly interfaces with a consistent design language without worrying about the underlying platform. The focus on accessibility and performance means that developers can achieve a high level of usability with minimal effort.
 
-Whereas dank is a styling library
+React Native Web is great! Gluestack UI needs React Native Web’s “components” to build universal components.
 
-- A CSS-in-JS library to style any given React / React Native component
-- A theming solution (improve this writing)
-- Each component built with dank can be styled with
-  - Tokens
-  - Variants
-  - Media Queries
-  - States (hover, focus, etc)
-  - Platform
-  - Color Mode
-  - …
+Gluestack UI builds upon the React Native Web components by adding accessibility props, focus management, and other functionality to ensure that the components are accessible and performant.
 
-React Native Web is great! Dank needs React Native Web’s “components” to build universal components.
+## Why Use Gluestack, When We Already Have NativeBase?
 
-But, dank doesn’t use React Native Web’s styling engine (which is highly performant)! Dank’s babel-plugin (compiler) precompiles the declarative styling object into CSS classes and declarations and injects them directly during compile-time leading to zero style calculation during the runtime.
-
-## Why Use dank, When We Already Have NativeBase?
-
-Dank was originally part of NativeBase, but it has since evolved into a standalone library focused solely on styling. Unlike NativeBase, which is a complete component library that includes styling, accessibility, and a default theme, dank focuses specifically on styling.
+Gluestack UI was originally part of NativeBase, but it has since evolved into a standalone library focused solely on accessibility. Unlike NativeBase, which is a complete component library that includes styling, accessibility, and a default theme, Gluestack UI focuses specifically on accessibility.
 
 While NativeBase provides a comprehensive solution for building web and mobile applications, dank offers a more streamlined and flexible solution for managing styles in your projects. This makes dank a complementary tool for developers who are already using NativeBase, or for those who want to focus specifically on styling without the added complexity of a full component library.
 
 ## Goals
 
-- Universal CSS-in-JS solution (implementation per platform can differ)
-- Consistent API for developers
-- Solve CSS Specificity
-- TypeScript everything
-- Styling for
-  - Theme / token
-  - Variants
-  - Media Queries
-  - States
-  - Platform based styling
-  - Color Mode
-- Composable (should work with other libraries)
+- Accessibility: Gluestack UI aims to provide a set of accessible components that work across different platforms and devices. The components come with accessibility features such as ARIA attributes, keyboard navigation, and focus management.
+
+- Consistency: Gluestack UI provides a consistent design language across different platforms, making it easier to build interfaces that look and feel the same on different devices.
+
+- Ease of use: Gluestack UI components are designed to be easy to use and customizable, with clear and concise APIs that make it simple to integrate them into existing projects.
 
 ## Non goals
 
-- Don’t solve problems beyond styling!
-- Accessibility (check universa11y.dev)
-- Design (check gluestack-ui)
+- Theming: Gluestack UI does not provide an out-of-the-box theming system. While the components can be customized using style props, the library does not offer a theme provider or a pre-built set of themes. (check dank.style)
+
+- Flexibility: Gluestack UI components are designed to work in a specific way and may not be suitable for all use cases. The library is not intended to be a one-size-fits-all solution, and developers may need to build their own components or use other libraries for certain use cases.
+
+- Design
+
 - Animation (check examples with Legend-Motion)
 
 ## Future Considerations:
 
-- Compatibility with other libraries and frameworks, including:
-  - Solid
-  - Svelte
-  - Vue
-  - Astro
-  - Qwik
-- Bundler plugin instead of the current babel-plugin, which would allow for:
-
-  - Generation of separate CSS files
-  - Removal of intermediate components where appropriate
+- Gluestack UI is committed to continuously expanding its library of components to meet the needs of developers.
+- In the future, we plan to add more components to the library, such as navigation, combobox, and accordion.
+- Our goal is to provide a comprehensive set of accessible and customizable components for building web and mobile applications.
 
   Please note that these features are not part of the current roadmap, but are being actively considered for future development.
-
-## Notes to Keep in Mind:
-
-Though this is internal to the library, it’s great if you know the following:
-
-- Dank generates CSS styles for media queries using pure CSS.
-- Currently, media-query color-mode preferences are not supported.
-- Dank creates CSS classes and declarations, but does not utilize CSS pseudo-selectors (e.g. `:hover`) for user interactions. This allows developers to have more control over user interactions and handle them with logic as needed.
-- CSS class declarations generated by dank follow a specific "order of specificity," including:
-
-  - Variants
-  - States (e.g. hover, focus)
-  - Color mode
