--- a/example/storybook/src/components/VStack/index.stories.mdx
+++ b/example/storybook/src/components/VStack/index.stories.mdx
@@ -168,7 +168,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 
 ## Customizing the VStack
 
-For customizing the VStack, you have to map styled view to Box. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
+We have a function called `createVStack` which can be used to create a custom VStack component. This function takes in a configuration object which contains the styled components that you want to use for the VStack. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
 
 ### Usage
 
