--- a/example/storybook/src/components/Divider/index.stories.mdx
+++ b/example/storybook/src/components/Divider/index.stories.mdx
@@ -1,21 +1,154 @@
-import { Canvas, Meta, Story } from '@storybook/addon-docs';
+---
+title: Divider | UI
+description: Divider can visually separate content in a given list or group.
+pageTitle: Divider
+pageDescription: Divider can visually separate content in a given list or group.
+showHeader: true
+---
+
+import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Divider" />
 
-# Divider
+import { Divider, VStack, HStack } from './Divider';
+import { transformedCode } from '../../utils';
+import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
-A Divider component is used to create a visual separation between different sections or elements in a layout. In React Native, the Divider component can be generated using a third-party accessibility-focused library that uses "styled views" to define the layout, visual design, and behavior of the component.
+import { styled } from '@dank-style/react';
 
-## Styled Views
+import Wrapper from '../Wrapper';
 
-Styled views are used to define the layout and visual design of the Divider, such as its size, shape, border, and background color. They allow you to easily create a consistent look and feel for your component, while also making it easy to customize the design to match your app's overall style.
+# Installation
 
-## Importing and Using a Third-Party Universal Accessibility Divider Component Library
+This command copies the `Divider` component to your project.
 
-There are several third-party libraries available for creating Divider components in React Native, such as `react-native-universally-components` or `react-native-accessibility-components` that are focused on accessibility. These libraries provide pre-built Divider components that are ready to use, and can be easily imported and used in any React Native project while providing accessibility features like screen reader support and other accessibility-related features.
+```jsx
+npx install @gluestack/ui add Divider
+```
 
-When using a third-party library, the component can be used with props such as `color`, `orientation`, `thickness` to customize the behavior and appearance of the Divider. You can also style the divider using the `style` prop, this prop accepts an object containing the styles of the divider.
+## Usage
 
-<Canvas style={{ height: 500 }}>
-  <Story id="stories-data-display-divider--divider" />
-</Canvas>
+```jsx
+// import the component from your component folder
+import { Divider } from 'components';
+
+// Using the Divider component
+export default () => <Divider />;
+```
+
+<br />
+
+# Basic
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: `
+  <Text>
+    Easy
+  </Text>
+  <Divider />
+  <Text>
+    Difficult
+  </Text>
+`,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: {
+        Wrapper,
+        Divider,
+        Text,
+      },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+<br />
+
+## Anatomy
+
+The Divider component consists of the following parts:
+
+```jsx
+export default () => <Divider />;
+```
+
+## API Reference
+
+### Divider
+
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+
+<br />
+<br />
+
+## Examples
+
+### Variants
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: `
+<Text>Vertical</Text>
+<HStack h={20} space="md" alignItems="center">
+  <Text>Simple</Text>
+  <Divider variant="vertical"/>
+  <Text>Easy</Text>
+  <Divider variant="vertical"/>
+  <Text>Beautiful</Text>
+</HStack>
+<Text>Horizontal</Text>
+<VStack>
+  <Text>Firefox</Text>
+  <Divider variant="horizontal" />
+  <Text>Chrome</Text>
+</VStack>
+`,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: {
+        Wrapper,
+        Divider,
+        VStack,
+        HStack,
+        Text,
+      },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+<br />
+
+# Advanced
+
+## Customizing the Divider
+
+For customizing the Divider, you have to map styled view to Divider. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
+
+### Usage
+
+```jsx
+// import the styles
+import { Root } from './components/Divider';
+
+// import the createDivider function
+import { createDivider } from '@gluestack-ui/divider';
+
+// Understanding the API
+const Divider = createDivider({
+  Root,
+});
+
+// Using the Divider component
+export default () => <Divider />;
+```
+
+Default styling of the component can be found in the `components/Divider` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/box/index.tsx) of the styled `Divider` component.
