--- a/example/storybook/src/components/Pressable/index.stories.mdx
+++ b/example/storybook/src/components/Pressable/index.stories.mdx
@@ -1,11 +1,124 @@
-import { Canvas, Meta, Story } from '@storybook/addon-docs';
+---
+title: Pressable | UI
+description: Pressable is a lower level primitive if you need more flexibility than a button and access to hover, pressed and focus events.
+pageTitle: Pressable
+pageDescription: Pressable is a lower level primitive if you need more flexibility than a button and access to hover, pressed and focus events.
+showHeader: true
+---
+
+import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Pressable" />
 
-# Pressable
+import { Pressable, Center } from './Pressable';
+import { transformedCode } from '../../utils';
+import { AppProvider, CodePreview, Text } from '@gluestack/design-system';
 
-A Pressable component is used to create clickable elements that perform an action when pressed. In React Native, the Pressable component is typically generated using "styled views" and "pressable" to define the layout, visual design, and behavior of the button.
+import { styled } from '@dank-style/react';
 
-<Canvas style={{ height: 400 }}>
-  <Story id="stories-forms-pressable--pressable" />
-</Canvas>
+import Wrapper from '../Wrapper';
+
+# Installation
+
+This command copies the `Pressable` component to your project.
+
+```jsx
+npx install @gluestack/ui add Pressable
+```
+
+## Usage
+
+```jsx
+// import the component from your component folder
+import { Pressable } from 'components';
+
+// Using the Pressable component
+export default () => (
+  <Pressable>
+    <Text>Pressable</Text>
+  </Pressable>
+);
+```
+
+<br />
+
+# Basic
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: `
+ <Pressable
+  onPress={() => console.log('Hello')}
+  sx={{ h: 100, w: 200 }}>
+    <Center
+      sx={{
+        h: '100%',
+        w: '100%',
+        bg: '$primary500',
+      }}
+    />
+</Pressable>
+`,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: {
+        Wrapper,
+        Pressable,
+        Center,
+        Text,
+      },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+<br />
+
+## Anatomy
+
+The pressable component consists of the following parts:
+
+```jsx
+export default () => (
+  <Pressable>
+    <Text>Pressable</Text>
+  </Pressable>
+);
+```
+
+## API Reference
+
+### Pressable
+
+It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
+
+<br />
+<br />
+
+# Advanced
+
+## Customizing the Pressable
+
+For customizing the Pressable, you have to map styled view to Pressable. You can refer [dank.style](https://dank.style/) for more information on how to use styled components.
+
+### Usage
+
+```jsx
+// import the styles
+import { Root } from './components/Pressable';
+
+// mapping the Pressable to root component
+const Pressable = Root;
+
+// Using the Pressable component
+export default () => (
+  <Pressable>
+    <Text />
+  </Pressable>
+);
+```
+
+Default styling of the component can be found in the `components/Pressable` file. For reference, you can view the [source code](https://github.com/gluestack/universa11y/blob/development/example/storybook/src/components/styled-components/pressable/index.tsx) of the styled `Pressable` component.
