--- a/example/storybook/src/advanced/Architecture/index.stories.mdx
+++ b/example/storybook/src/advanced/Architecture/index.stories.mdx
@@ -9,9 +9,9 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Architecture
 
-The architecture of dank is based on the concept of **styled components**, which enhances existing components to make them customizable and themeable. It has several features such as **state-based styling**, **variant support**, **platform-based styling**, **size support**, **color mode support**, **media query support**, **context-based styling**, and styling for **descendant components**.
+The architecture of dank is based on the concept of **styled components**, which enhances existing components to make them customizable and themeable. It has several features such as **state-based styling**, **variant support**, **platform-based styling**, **color mode support**, **media query support**, **context-based styling**, and styling for **descendant components**.
 
-The library exports a styled function that takes a React component and returns a new component with the styles applied. This function also accepts properties like **baseStyle**, **variants**, **sizes**, **colorMode**, **state**, **queries**, and **descendants** to apply styles based on different conditions.
+The library exports a styled function that takes a React component and returns a new component with the styles applied. This function also accepts **style properties**, **variants**, **state properties (:hover, :active etc)**, **media queries properties (@sm, @md etc)** and **descendants** to apply styles based on different conditions.
 
 The library also has a **StyledProvider** component that accepts a **config prop** for configuration. This provider is used to set the theme tokens and breakpoints that the library uses. A **flush** function is also provided for server-side rendering.
 
@@ -19,11 +19,9 @@ The library generates unique style IDs for each style object, which are stored i
 
 Custom theming is possible by allowing users to provide their own theme tokens, which can be used to customize the styles of components. The library also supports media queries and responsive design by allowing for the configuration of breakpoints. Styles can also be overridden using the `sx` prop or reduced verbosity with aliases.
 
-However, there are limitations to using dank, such as its compatibility with non-React components and libraries that manipulate the DOM directly. This can lead to an increased bundle size and longer development time for larger projects.
-
 In summary, dank provides a powerful and flexible styling solution for React components with support for various styling features and custom theming. It allows for responsive design, style overrides, and reduced verbosity, but may have limitations when used with certain components or libraries.
 
-Dank also supports **custom theming** and **media queries**, as well as overriding styles using the `sx` prop, and reducing verbosity with aliases. However, it has limitations when working with non-React components and libraries that manipulate the DOM directly, and can result in increased bundle size and longer development time for larger projects.
+Dank also supports **custom theming** and **media queries**, as well as overriding styles using the **`sx`** prop, and reducing verbosity with aliases.
 
 In summary, dank provides a flexible and powerful styling solution for React components, with support for various **styling features**, **custom theming**, and **responsive design**.
 
