--- a/example/storybook/src/api/DescendantsStyles/index.stories.mdx
+++ b/example/storybook/src/api/DescendantsStyles/index.stories.mdx
@@ -12,7 +12,7 @@ import { Button, AppProvider, CodePreview } from '@gluestack/design-system';
 import { config } from './config';
 import { styled, StyledProvider } from '@dank-style/react';
 
-# Descendant Styling (Context based)
+# Descendant Styles (Context based)
 
 We can define descendants styles in **componentStyleConfig** Object inside the component name prop starting with and underscore, where we can define styles that are passed down to children using context-based styling. This approach allows for the global styling of a component to be managed in a centralized location, rather than having to pass down props.
 
