--- a/example/storybook/src/api/UtilityProps/index.stories.mdx
+++ b/example/storybook/src/api/UtilityProps/index.stories.mdx
@@ -5,9 +5,9 @@ description: Writing inline styles with Utlity Props. We provide you the ability
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="api/Utility props" />
+<Meta title="api/Overriding Styles (Utility Props)" />
 
-# Utility Props
+# Overriding Styles (Utility Props)
 
 We know the whole structure of writing your styles in `sx` props way is a bit tricky to learn hence we also provide you with the ability to pass down utility props on any Styled Component, we internally convert this to `sx` prop (We are also working on a babel plugin that does this at build time to save time for this conversion).
 
