--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -24,7 +24,7 @@ Dank originally started as part of NativeBase, a universal component library for
 
 Dank and React Native Web aren’t directly comparable as they are different.
 
-React Native Web has two parts
+**React Native Web has two parts**
 
 - A set of low-level components
 - A styling library to style those components
@@ -40,7 +40,6 @@ React Native Web has two parts
   - States (hover, focus, etc)
   - Platform
   - Color Mode
-  - …
 
 React Native Web is great! Dank needs React Native Web’s “components” to build universal components.
 
