--- a/example/storybook/src/overview/Performance/index.stories.mdx
+++ b/example/storybook/src/overview/Performance/index.stories.mdx
@@ -11,7 +11,13 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 Dank prioritizes performance and is optimized for even complex applications with many elements. **With a babel plugin for pre-computing styles during the build process, and runtime performance optimizations, dank delivers high performance styling**.
 
-We tested the performance of our landing page, built with `dank` and a large number of elements, using Lighthouse and achieved a **high score of 98 for Performance, 90 for Accessibility, 100 for Best Practices, and 90 for SEO**. You can check out the website and see the Lighthouse report for yourself.
+We tested the performance of our landing page, built with `dank` and a large number of elements, using Lighthouse and achieved a **high score of 100 for Performance, 97 for Accessibility, 92 for Best Practices, and 100 for SEO**. You can check out the website and see the Lighthouse report for yourself.
+
+<img
+  src="/assets/PerformanceScreenshot.png"
+  width="70%"
+  alt="Perfromance matrics from lighthouse report"
+/>
 
 Dank also supports Server-Side Rendering (SSR) through the flush function, which allows styles to be rendered on the server and hydrated on the client, eliminating the FOUC(Flash of Unstyled Content) issue and improving the overall user experience.
 
