--- a/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
+++ b/example/storybook/src/api/ResponsiveStyles/index.stories.mdx
@@ -14,7 +14,7 @@ import { AppProvider, CodePreview } from '@gluestack/design-system';
 import { config } from './config';
 import { useState } from 'react';
 
-# Responsive styles
+# Responsive Styles
 
 Dank provides support for responsive styles through the use of media queries.
 
