--- a/example/storybook/src/api/StateBasesStyles/index.stories.mdx
+++ b/example/storybook/src/api/StateBasesStyles/index.stories.mdx
@@ -13,7 +13,7 @@ import { AppProvider, CodePreview } from '@gluestack/design-system';
 import { config } from './config';
 import { useState } from 'react';
 
-# State Based Styling
+# State Based Styles
 
 This includes the ability to define styles based on the component's state. This allows you to create dynamic and interactive styles that change based on user interactions or other events.
 
