--- a/example/storybook/src/api/createStyled/index.stories.mdx
+++ b/example/storybook/src/api/createStyled/index.stories.mdx
@@ -5,9 +5,9 @@ description: Create custom styled components with createStyled function and plug
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="api/createStyled" />
+<Meta title="api/createStyled()" />
 
-# createStyled
+# createStyled()
 
 You can add custom plugins to resolve style or your component before your component reaches styled. createStyled is a function that takes in a array of plugins and returns a function that takes in a component and returns a styled component.
 
